dev: Updated laser turret mk2

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,6 +36,7 @@ turrets-2=Turrets 2
 iron-walls=Iron walls
 steel-walls=Steel walls
 titanium-walls=Titanium walls
+laser-turrets-2=Laser turrets Mk2
 
 [technology-description]
 
